@@ -1,5 +1,7 @@
 1.1.3
 
+- Adds :option:`--cover-xml` and :option:`--cover-xml-file` (#311).
+  Patch by Timothée Peignier.
 - Adds support for :option:`--cover-branches` (related to #370).
   Patch by Timothée Peignier.
 - Fixed Unicode issue on Python 3.1 with coverage (#442)
